primate_bird_stops.r now calculates the percentage of conserved stop codons between human and chicken in the top 100 expressed genes in  12 tissues
edited the script used to recover stopcodns to be able to select any codon position to retrieve

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ test
 test/*
 resultPrep/__pycache__/
 resultPrep/__pycache__/*
+stopcodons/__pycache__/
+stopcodons/__pycache__/*
+stopcodons/test.tsv
